--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta charset="utf-8">
 
         <!-- START Style Sheets -->
-        <!-- Bootstrap CDN Goes Here -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 
         <!-- Our personal style sheet -->
         <link rel="stylesheet" href="style.css" charset="utf-8">
@@ -13,22 +14,22 @@
     <title>Bootstrap Framework Example</title>
   </head>
   <nav>
-    <ul>
-      <li><a href="#">HOME</a></li>
-      <li><a href="#">ABOUT</a></li>
-      <li><a href="#">WORK</a></li>
-      <li><a href="#">CONTACT</a></li>
+    <ul class="nav" class="nav-tabs">
+      <li class="nav-item"><a href="#" class="nav-link">HOME</a></li>
+      <li class="nav-item"><a href="#" class="nav-link">ABOUT</a></li>
+      <li class="nav-item"><a href="#" class="nav-link">WORK</a></li>
+      <li class="nav-item"><a href="#" class="nav-link">CONTACT</a></li>
     </ul>
   </nav>
 
   <!-- START Image -->
-  <div>
+  <div class="text-center" class="img-fluid">
       <img src="img/asset_holder.jpg"/>
   </div>
   <!-- END Image -->
 
   <!-- START body wrapping -->
-  <div>
+  <div class = "container">
 
     <!-- START Page Header -->
     <div>
@@ -37,27 +38,30 @@
     <!-- END Page header -->
 
     <!-- START Three content sections -->
-  <div>
+  <div class="row">
     <div>
-      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor. </p>
+      <p class="col-sm"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor. </p>
     </div>
     <div>
-      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
+      <p class="col-sm" Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
     </div>
     <div>
-      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
+      <p class="col-sm"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
     </div>
   </div>
   <!-- END Three content sections -->
 
     <hr>
   <!-- START Callout box -->
-  <div>
+  <div class="jumbotron">
     <h1>Hello, world!</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in.</p>
 
     <!-- START Learn More link -->
-    <p><a href="#">Learn more</a></p>
+    <p><a href="#"  class="btn btn-outline-primary"
+
+
+      >Learn more</a></p>
     <!-- END Learn More link -->
   </div>
   <!-- END Callout box -->
@@ -65,7 +69,7 @@
     <hr>
 
   <!-- START Information Table -->
-  <table>
+  <table class="table" class="table-striped">
     <thead>
       <tr>
         <th>Name</th>
